# PyDomuwa

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/docker/: entrypoint.dev.sh  entrypoint.prod.sh
backend/domuwa/: __init__.py  config.py  database.py  main.py
backend/domuwa/answers/: constants.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/auth/: __init__.py  models.py  routes.py  schemas.py  security.py  services.py
backend/domuwa/core/: exceptions.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/game_categories/: constants.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/game_rooms/: models.py
backend/domuwa/game_types/: constants.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/models/: __init__.py  answer.py  game_category.py  game_room.py  game_type.py  links.py  player.py  player_score.py  qna_category.py  question.py  ranking.py
backend/domuwa/players/: models.py  routes.py  schemas.py  services.py
backend/domuwa/qna_categories/: constants.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/questions/: constants.py  models.py  routes.py  schemas.py  services.py
backend/domuwa/rankings/: models.py
backend/domuwa/routers/: __init__.py  answers_router.py  game_category_router.py  game_types_router.py  players_router.py  qna_categories_router.py  questions_router.py
backend/domuwa/services/: __init__.py  answers_services.py  (+5 more)
backend/tests/: common_tc.py  conftest.py  factories.py  test_game_type.py  test_player.py  test_qna_category.py  test_question.py
(+90 files in other folders)
