[project]
name = "domuwa"
version = "0.1.0"
description = ""
authors = [{ name = "tobasqo", email = "szymon.j.jaskowski@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "sqlmodel>=0.0.22,<0.0.23",
  "fastapi[standard]>=0.115.6,<0.116",
  "pyjwt>=2.9.0,<3",
  "passlib[bcrypt]>=1.7.4,<2",
  "pydantic-settings>=2.6.0,<3",
  "itsdangerous>=2.2.0,<3",
  "bcrypt>=4.3.0,<5",
]

[dependency-groups]
dev = [
  "ruff>=0.7.0,<0.8",
  "mypy>=1.13.0,<2",
  "types-passlib>=1.7.7.20240819,<2",
]
test = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<0.25",
  "factory-boy>=3.3.1,<4",
  "types-factory-boy>=0.4.1,<0.5",
  "pytest-xdist>=3.6.1,<4",
]

[tool.uv]
package = false
default-groups = ["dev", "test"]

[tool.mypy]
python_version = "3.13"
exclude = [".venv", "alembic"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
show-fixes = true
target-version = "py313"
line-length = 88
src = ["domuwa/*", "tests/*"]
exclude = ["alembic"]

[tool.ruff.lint]
extend-select = ["ANN", "C4", "COM", "I", "N", "PT", "RET", "SIM", "TCH", "TID"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "ANN102",
  "ANN201",
  "ANN202",
  "COM812",
  "PT023",
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["domuwa", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
